Refactored payments services structure and main file
